--- a/3dgame/External/DirectXTK-main/DirectXTK_Desktop_2022.vcxproj
+++ b/3dgame/External/DirectXTK-main/DirectXTK_Desktop_2022.vcxproj
@@ -250,6 +250,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <SupportJustMyCode>false</SupportJustMyCode>
       <ExternalWarningLevel>Level4</ExternalWarningLevel>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
