--- a/3dgame/3dgame.vcxproj
+++ b/3dgame/3dgame.vcxproj
@@ -58,6 +58,7 @@
     <ClInclude Include="source\Camera.h" />
     <ClInclude Include="source\CameraController.h" />
     <ClInclude Include="source\Component\Entity.h" />
+    <ClInclude Include="source\Component\Register.h" />
     <ClInclude Include="source\Component\SparseSet.h" />
     <ClInclude Include="source\Framework.h" />
     <ClInclude Include="source\Graphics\bloom.h" />
